codigo praticamente perfect

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>TITULO DA PAGINA</title>
   </head>
   <body>
-    <h1>Título da págiana</h1>
-    <p>Aqui vai o código HTML que fará seu site aparecer.</p>
-    <img src="dinossauro.jpg">
-    <p>Segundo parágrafo</p>
-    <p>Terceito parágrafo</p>
+    <h1>MINICREFT AVENTURAS</h1>
+    <p> MINICREFT:Uma aventura sem limites... resumidamente vou explicar o surgimento do minicreft, 
+        O desenvolvedor sueco Markus "Notch" Persson queria criar um jogo fora
+        dos padrões de jogos comuns e populares de sua época, pois achava mais
+        interessante "criar mundos interativos de trabalho do que criar cenários bonitos", 
+        levando o desenvolvimento de Minecraft como um verdadeiro projeto.</p>
+    <img src="file:///tmp/guest-5xmyf0/Downloads/persson.webp">
+    <p>Quando estiver no fundo do poço, lembre-se e na camada 12 que 
+        se acha diamante... minicreft e anti pensamentos ruins, um game
+        que tras apenas alegria e prazer en jogar.</p>
+    <p>Mais resumidamente, para que todos entendam, o minicreft e um jogo em que Seu objetivo é coletar recursos 
+        (madeira, rochas, minérios, carvão, alimentos) e construir ferramentas e abrigos cada,
+        vez melhores para sobreviver e se salvar dos monstros queu surgem durante a noite. Mas não é só de sobrevivência que 
+        o jogo se trata, tambem tem a opção "criativo" que disponibiliza voçe conseguir objetos ilimitados facilmente. </p>
     <ol>
         <li>primeiro item</li>
         <li>segundo item</li>
