--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         dos padrões de jogos comuns e populares de sua época, pois achava mais
         interessante "criar mundos interativos de trabalho do que criar cenários bonitos", 
         levando o desenvolvimento de Minecraft como um verdadeiro projeto.</p>
-    <img src="file:///tmp/guest-5xmyf0/Downloads/persson.webp">
+    <img src="persson.webp">
     <p>Quando estiver no fundo do poço, lembre-se e na camada 12 que 
         se acha diamante... minicreft e anti pensamentos ruins, um game
         que tras apenas alegria e prazer en jogar.</p>
